--- a/lesson-1-Agentic Workflow Implementation with Semantic Kernel/Demo/simple-agents-demo.ipynb
+++ b/lesson-1-Agentic Workflow Implementation with Semantic Kernel/Demo/simple-agents-demo.ipynb
@@ -9,6 +9,10 @@
     " \n",
     "## Overview\n",
     "This notebook demonstrates how to build a **multi-agent system** using Semantic Kernel where different specialized agents handle specific types of customer inquiries.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"lesson_1.png\" alt=\"Alt text\" width=\"800\"/>\n",
+    "</div>\n",
     " \n",
     "### Key Concepts Covered:\n",
     "1. **Agent Specialization**: Each agent has a specific domain of expertise\n",
