--- a/lesson-3-Implementing Agentic Routing Workflow with Semantic Kernel/Demo/orchestrator_pluin_agents.ipynb
+++ b/lesson-3-Implementing Agentic Routing Workflow with Semantic Kernel/Demo/orchestrator_pluin_agents.ipynb
@@ -9,6 +9,10 @@
     " \n",
     "## Overview\n",
     "This notebook demonstrates the **orchestrator pattern** where a central agent delegates tasks to specialized worker agents. Unlike sequential chaining, the orchestrator intelligently routes each request to the appropriate specialist.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"lesson_3.png\" alt=\"Alt text\" width=\"1050\"/>\n",
+    "</div>\n",
     " \n",
     "### Key Concepts Covered:\n",
     "1. **Orchestrator Pattern**: Central agent routes requests to specialists\n",
