--- a/lesson-4-Implementing Agentic Parallelization Workflow with Semantic Kernel/Demo/parrallel_agents.ipynb
+++ b/lesson-4-Implementing Agentic Parallelization Workflow with Semantic Kernel/Demo/parrallel_agents.ipynb
@@ -9,6 +9,10 @@
     " \n",
     "## Overview\n",
     " This notebook demonstrates **parallel agent processing** with data validation. Multiple specialized agents analyze different aspects of restaurant menu data simultaneously, their outputs are cleaned and standardized, then validated for quality assurance.\n",
+    "\n",
+    " <div align=\"center\">\n",
+    "<img src=\"lesson_4.png\" alt=\"Alt text\" width=\"650\"/>\n",
+    "</div>\n",
     " \n",
     " ### Key Concepts Covered:\n",
     " 1. **Parallel Agent Execution**: Multiple agents process data simultaneously using `asyncio.gather()`\n",
