--- a/lesson-5-Implementing Agentic Evaluator-Optimizer Workflow with Semantic Kernel/Demo/critic.ipynb
+++ b/lesson-5-Implementing Agentic Evaluator-Optimizer Workflow with Semantic Kernel/Demo/critic.ipynb
@@ -9,6 +9,10 @@
     " \n",
     " ## Overview\n",
     " This notebook demonstrates the **creator-critic pattern** with **iterative refinement**. A creator agent generates marketing campaigns, a critic agent reviews them, and the process repeats until the campaign meets quality standards or reaches maximum iterations.\n",
+    "\n",
+    "  <div align=\"center\">\n",
+    "<img src=\"lesson_5.png\" alt=\"Alt text\" width=\"500\"/>\n",
+    "</div>\n",
     " \n",
     " ### Key Concepts Covered:\n",
     " 1. **Sequential Orchestration**: Agents work in a defined sequence\n",
