--- a/lesson-6-Implementing Agentic Orchestrator-Workers Pattern with Semantic Kernel/Demo/orchestratot.ipynb
+++ b/lesson-6-Implementing Agentic Orchestrator-Workers Pattern with Semantic Kernel/Demo/orchestratot.ipynb
@@ -10,6 +10,11 @@
     "---\n",
     "## Introduction\n",
     "In this notebook, we will build an **Agentic Workflow** using `semantic-kernel` where multiple AI agents collaborate to produce a **Renewable Energy Feasibility Report**.  \n",
+    "\n",
+    "  <div align=\"center\">\n",
+    "<img src=\"lesson_6.png\" alt=\"Alt text\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
     "The workflow includes:\n",
     "- **Orchestrator Agent**: Plans and synthesizes results.\n",
     "- **Policy Agent**: Collects and summarizes regulatory and policy frameworks.\n",
